Update Emporos website: Cloud Run deployment and content updates

--- a/ar/index.html
+++ b/ar/index.html
@@ -210,7 +210,7 @@
                 </ul>
             </nav>
             <div class="language-selector">
-                <a href="/index.html" class="language-switcher language-link lang-switcher-en">English</a>
+                <a href="/en" class="language-switcher language-link lang-switcher-en">English</a>
             </div>
             <div class="menu-toggle">
                 <i class="fas fa-bars"></i>
