Test CI/CD workflow

--- a/ar/index.html
+++ b/ar/index.html
@@ -191,7 +191,7 @@
                         <div class="company-name arabic">
                             <span>إمبوروس</span>
                             <span>وساطة</span>
-                            <span>نمو</span>
+                            <span>نمو نمو</span>
                         </div>
                     </div>
                 </div>
@@ -398,7 +398,7 @@
                                 <div class="company-name arabic">
                                     <span>إمبوروس</span>
                                     <span>وساطة</span>
-                                    <span>نمو</span>
+                                    <span>نمونمو</span>
                                 </div>
                                 
                             </div>
