--- a/ar/index.html
+++ b/ar/index.html
@@ -221,7 +221,7 @@
     <section id="hero">
         <div class="container">
             <div class="hero-content" style="text-align:right;">
-                <h1>نصنع الروابط، ندفع النمو</h1>
+                <h1><h1>نصنع الروابط، ندفع النمو - تحديث تجريبي</h1></h1>
                 <p>نربط الأعمال بالعملاء، وندفع عجلة النمو</p>
                 <a href="#services" class="btn">اكتشف خدماتنا</a>
             </div>
