--- a/ar/index.html
+++ b/ar/index.html
@@ -202,7 +202,7 @@
                 <ul>
                     <li><a href="#hero" class="home-link">الرئيسية</a></li>
                     <li><a href="#services">خدماتنا</a></li>
-                    <li><a href="#technologies">خدمات SaaS (قريباً)</a></li>
+                    <li><a href="#technologies">خدمات SaaS (قريباً جدا)</a></li>
                     <li><a href="#cloud-providers">قيمنا الأساسية</a></li>
                     <li><a href="#who-we-are">من نحن</a></li>
                     <li><a href="#why-work-with-us">لماذا نحن</a></li>
